package com.smartcommunity.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.smartcommunity.entity.CreditLog;
import org.apache.ibatis.annotations.Mapper;

@Mapper
public interface CreditLogMapper extends BaseMapper<CreditLog> {
}
