package com.smartcommunity.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.smartcommunity.entity.PropertyTask;
import org.apache.ibatis.annotations.Mapper;

@Mapper
public interface PropertyTaskMapper extends BaseMapper<PropertyTask> {
}
