@startuml
title 数据访问包图

skinparam packageStyle rectangle
skinparam shadowing false
skinparam defaultFontName Microsoft YaHei

package "数据访问包" as DATA {
  package "实体层\nentity" as ENTITY {
    [User]
    [RepairOrder]
    [Complaint]
    [CreditLog]
    [PaymentReminder]
    [PropertyTask]
    [Activity]
    [RecommendRule]
  }

  package "持久层接口\nmapper" as MAPPER {
    interface UserMapper
    interface RepairOrderMapper
    interface ComplaintMapper
    interface CreditLogMapper
    interface PaymentReminderMapper
    interface PropertyTaskMapper
    interface ActivityMapper
    interface WorkerMapper
  }

  package "SQL映射文件\nresources/mapper" as XML {
    [UserMapper.xml]
    [RepairOrderMapper.xml]
    [PaymentReminderMapper.xml]
    [StatisticsMapper.xml]
    [WorkerMapper.xml]
  }

  package "数据库脚本\nresources/db" as DB {
    [schema.sql]
    [seed_demo.sql]
    [innovation_features_upgrade.sql]
    [performance_index_upgrade.sql]
  }
}

ENTITY <.. MAPPER : 读写对象
MAPPER ..> XML : 自定义SQL
XML ..> DB : 对应表结构

note right of DATA
职责：
1. 完成实体对象与数据库表之间的映射
2. 实现增删改查和分页查询
3. 通过 XML 承载复杂 SQL 与统计查询
4. 配合事务完成业务数据持久化
end note

@enduml
